--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,8 @@ layout: page
 
 {% assign posts = paginator.posts | default: site.posts %}
 
+<img src="/assets/gif/TPP.gif" alt="description of gif" /> 
+
 <div class="posts-list">
   {% for post in posts %}
   <article class="post-preview">
