--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,7 +14,7 @@ layout: base
           {% endfor %}
         </div>
       {% endif %}
-
+      <img src="/assets/gif/TPP.gif" alt="description of gif" /> 
       {{ content }}
 
       {% if page.after-content %}
